[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Tscene/KokGakMeletus.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.3469
height = 354.96

[node name="KokGakMeletus" type="RigidBody2D"]
input_pickable = true
collision_layer = 16384
collision_mask = 16384
mode = 3
contacts_reported = 10
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_KokGakMeletus_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_KokGakMeletus_body_shape_entered"]
[connection signal="input_event" from="." to="." method="_on_KokGakMeletus_input_event"]
